Update for conda-build 3

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -20,9 +20,11 @@ build:
 
 requirements:
   build:
+    - {{ compiler('c') }}
+  host:
     - python
     - cython
-    - numpy >=1.11
+    - numpy
     - msinttypes  # [win and py2k]
     - setuptools
     - flask
@@ -33,7 +35,7 @@ requirements:
 
   run:
     - python
-    - numpy >=1.11
+    - numpy
     - flask
     - mdtraj
     - mdanalysis  # [not win and py2k]
