--- a/.ci_support/win_c_compilervs2015python3.6.yaml
+++ b/.ci_support/win_c_compilervs2015python3.6.yaml
@@ -1,7 +1,11 @@
+c_compiler:
+- vs2015
 channel_sources:
 - conda-forge,defaults
 channel_targets:
 - conda-forge main
+numpy:
+- '1.11'
 pin_run_as_build:
   python:
     min_pin: x.x
@@ -10,5 +14,8 @@ pin_run_as_build:
     max_pin: x.x
 python:
 - '3.6'
+zip_keys:
+- - python
+  - c_compiler
 zlib:
 - '1.2'
