Migrate to Jinja2 compiler syntax

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -20,9 +20,12 @@ build:
 
 requirements:
   build:
+    - {{ compiler('c') }}
+  host:
     - python
     - cython
     - numpy >=1.11
+    - numpy
     - msinttypes  # [win and py2k]
     - setuptools
     - flask
@@ -34,6 +37,7 @@ requirements:
   run:
     - python
     - numpy >=1.11
+    - numpy
     - flask
     - mdtraj
     - mdanalysis  # [not win and py2k]
