--- a/.ci_support/win_c_compilervs2008python2.7.yaml
+++ b/.ci_support/win_c_compilervs2008python2.7.yaml
@@ -1,7 +1,11 @@
+c_compiler:
+- vs2008
 channel_sources:
 - conda-forge,defaults
 channel_targets:
 - conda-forge main
+numpy:
+- '1.14'
 pin_run_as_build:
   python:
     min_pin: x.x
@@ -9,6 +13,9 @@ pin_run_as_build:
   zlib:
     max_pin: x.x
 python:
-- '3.7'
+- '2.7'
+zip_keys:
+- - python
+  - c_compiler
 zlib:
 - '1.2'
